[Renata] - NA: fixes header icons alignment

--- a/themes/main/src/sass/partials/header.scss
+++ b/themes/main/src/sass/partials/header.scss
@@ -86,6 +86,7 @@ $logo-big-height: 5.2rem;
 
   position: absolute;
   top: 30%;
+  right: 10%;
 
   @include media-query(FOUR) {
     width: 230px;
